fix aligmnet in website

--- a/index.html
+++ b/index.html
@@ -25,26 +25,22 @@
        <div class="_inline-block">
          <article>
             <h1>Budget Overview</h1>
-            <h2>Track your income and expenses to manage your budget effectively.</h2>
+            <p>Track your income and expenses to manage your budget effectively.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
         </article>
 
         <article>
+            <h1>Money</h1>
             <p>
                 This is a simple web application to help you keep track of your finances. 
                 You can add income and expenses, view your budget summary, and analyze your spending habits.
             </p>
         </article>
 
-        <article>
+        <article id ="features">
             <h1>Features:</h1>
-            <p>
-                - Add Income and Expenses<br>
-                - View Budget Summary<br>
-                - Analyze Spending Habits<br>
-                - Export Data to CSV<br>
-                - Responsive Design for Mobile and Desktop
-
-            </p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda nemo quo sequi dolor perferendis odio velit labore, architecto eos non perspiciatis. Omnis vero autem aliquid voluptate quidem minima architecto nesciunt.</p>
         </article>
 
         <article>
